...
            }
        }
    }
}

enum class DataTabs(val representation : String) {
    GRAPHS("Graphs"), INPUT("Input"), SETTINGS("Settings")
}
