...
        }
        Text(text = "$pID")
        Button(onClick = {
            viewModel.onEvent(LinkScreenEvent.OnButtonClick(id = pID, onJoinLink = onJoinClick))
        }
        ) {
            Text(text = "Join Project")
        }
    }
}
